page de jeu (3)

--- a/page3.html
+++ b/page3.html
@@ -1,59 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FramCraft</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>25 Cartes</title>
+    <link rel="stylesheet" href="css/style_page3.css">
 </head>
 
 <body>
-    <div class="container">
-        <header>
-            <h1>FramCraft</h1>
-            <div class="score-container">
-                Score: <span id="score">0</span>
-            </div>
-        </header>
-        <main>
-            <div class="cards-container">
-                <!-- Placeholder for 25 cards -->
-                <div class="card">Card 1</div>
-                <div class="card">Card 2</div>
-                <div class="card">Card 3</div>
-                <div class="card">Card 4</div>
-                <div class="card">Card 5</div>
-                <div class="card">Card 6</div>
-                <div class="card">Card 7</div>
-                <div class="card">Card 8</div>
-                <div class="card">Card 9</div>
-                <div class="card">Card 10</div>
-                <div class="card">Card 11</div>
-                <div class="card">Card 12</div>
-                <div class="card">Card 13</div>
-                <div class="card">Card 14</div>
-                <div class="card">Card 15</div>
-                <div class="card">Card 16</div>
-                <div class="card">Card 17</div>
-                <div class="card">Card 18</div>
-                <div class="card">Card 19</div>
-                <div class="card">Card 20</div>
-                <div class="card">Card 21</div>
-                <div class="card">Card 22</div>
-                <div class="card">Card 23</div>
-                <div class="card">Card 24</div>
-                <div class="card">Card 25</div>
-            </div>
-            <div class="controls-container">
-                <input type="text" placeholder="Enter indice (word)" id="indice">
-                <input type="range" min="0" max="10" value="0" id="card-number">
-            </div>
-        </main>
+    <div>
+        <fields>
+            <card_parts></card_parts>
+        </fields>
     </div>
-
-    <script src="js/script.js"></script>
+    <div class="custom-div">
+        <input type="text" class="indice-input" placeholder="Enter word">
+        <select class="number-selector" id="number-selector"></select>
+        <button class="submit-button">Submit</button>
+    </div>
+    <script src="./script_page3.js"></script>
 </body>
 
 </html>
