--- a/page3.html
+++ b/page3.html
@@ -10,6 +10,10 @@
 </head>
 
 <body>
+    <div class="score-display">
+        <span class="score-text">Score:</span>
+        <span class="score-value">0</span>
+    </div>
     <div>
         <fields>
             <card_parts></card_parts>
